# pickLayer

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .qgis-plugin-ci  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: draft_release.yml  release.yml  test-and-pre-release.yml  tests.yml
.github/workflows/draft-release/: set-version-post0.py  set-version.py
docs/: development.md  osgeo-python-patch.md
pickLayer/: __init__.py  metadata.txt  plugin.py
pickLayer/core/: __init__.py  identifygeometry.py  picklayer.py  set_active_layer_tool.py
pickLayer/definitions/: settings.py
pickLayer/resources/i18n/: fi.qm  fi.ts
pickLayer/ui/: settings_dialog.py
picklayer/: __init__.py  build.py  metadata.txt  picklayer.py  plugin.py
picklayer/core/: identifygeometry.py  picklayer.py
picklayer/definitions/: __init__.py  settings.py
picklayer/ui/: settings_dialog.py
test/: conftest.py
test/ui/: test_settings_dialog.py
test/unit/: test_plugin.py  test_set_active_layer_tool.py
