[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickLayer"
dynamic = ["version"]
description = "QGIS plugin for setting layer properties and options straight from map canvas and for activating layer by clicking features on map."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GNU GPL v3.0" }
authors = [
    { name = "National Land Survey of Finland", email = "os@nls.fi" }
]
keywords = ["qgis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]
dependencies = [
    "qgis_plugin_tools==0.4.0"
]

[project.urls]
Homepage = "https://github.com/nlsfi/pickLayer"
Changelog = "https://github.com/nlsfi/pickLayer/blob/main/CHANGELOG.md"

[project.entry-points."qgis_plugin_tools"]
pickLayer = "pickLayer"

[tool.setuptools]
packages = [
    "pickLayer",
    "pickLayer.core",
    "pickLayer.definitions",
    "pickLayer.ui",
    "pickLayer.resources"
]

[tool.setuptools.package-data]
pickLayer = [
    "metadata.txt",
    "**/*.png",
    "**/*.svg",
    "**/*.ts",
    "**/*.qm",
    "**/*.ui"
]

[tool.setuptools.dynamic]
version = { attr = "pickLayer.core.__version__" }

[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = [
    "qgis-plugin-dev-tools==0.5.0",
    # testing
    "pytest==6.2.5",
    "pytest-qt==3.3.0",
    "pytest-mock==3.7.0",
    "pytest-cov==2.12.1",
    "pytest-qgis==1.3.5",
    ]
lint = [
    # stubs
    "pyqt5-stubs==5.15.6.0",

    "pre-commit==3.4.0",
    "mypy==1.19.1",
    "black==23.7.0",
    "ruff==0.0.292",

    # flake8 libraries not included in ruff
    "flake8==7.3.0",
    "flake8-pyproject==1.2.3",
    "flake8-qgis==1.0.0"
]

[tool.ruff]
ignore = [
    "ANN101", # Missing type annotation for self in method
    ]
line-length = 88

unfixable = [
    "F401", # Unused imports
    "F841", # Unused variables
]

# List of all rules https://docs.astral.sh/ruff/rules/
select = [
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "C90", # flake8, mccabe
    "E", # flake8, pycodestyle
    "F", # flake8, Pyflakes
    "I", # isort
    "N", # pep8-naming
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PL", # pylint
    "PT", # flake8-pytest-style
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T", # flake8-print
    "ICN", # flake8-import-conventions
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "W", # flake8, pycodestyle
    "UP", # pyupgrade
    ]

target-version = "py39"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"test*" = [
    "INP001",
    "ANN201",
    "ANN202",
	"ANN001",
	"ANN002",
    "E501",
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLR0913", # Too many arguments to function call (len(args) > 5)
    ]


[tool.flake8]
max-line-length = 88
spellcheck-targets = "names"
dictionaries = "en_US,python,technical"
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line length (checked by ruff now, possible mismatches)
]
per-file-ignores = [
    "test/*:INP001,QGS105",
]

[tool.qgis_plugin_dev_tools]
plugin_package_name = "pickLayer"
runtime_requires = [
	"qgis_plugin_tools"
]
version_number_source = "distribution"

[project.entry-points.qgis_plugin_dev_tools]
pickLayer = "pickLayer"
