[metadata]
name = pickLayer
version = attr: pickLayer.__version__
url = https://github.com/nlsfi/pickLayer
project_urls =
    Changelog = https://github.com/nlsfi/pickLayer/blob/main/CHANGELOG.md
author = National Land Survey of Finland
author_email = eero.hietanen@maanmittauslaitos.fi
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Typing :: Typed
license = GNU GPL v3.0
description = QGIS plugin for setting layer properties and options straight from map canvas and for activating layer by clicking features on map.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = qgis

[flake8]
# Black compatible values https://black.readthedocs.io/en/stable/compatible_configs.html#flake8
max-line-length = 88
exclude = test_*
extend-ignore =
            E203, # whitespace before ':'
            ANN101 # Missing type annotation for self in method

[isort]
# Black compatible values for isort https://black.readthedocs.io/en/stable/compatible_configs.html#isort
profile = black
multi_line_output = 3
